Iniciado implementações do swagger, implementado metodos do users
